# yaadpcml

./: CMakeLists.txt
.cache/clangd/index/: adpcm.cpp.47FFBE0CA9E6FA50.idx  adpcm.h.873855B89113C285.idx  main.cpp.0EEF9BA0A2CD81AE.idx
include/: adpcm.h
src/: adpcm.cpp  main.cpp
